# fpex0_python

./: .gitignore  DEVELOPER_INFO.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci-cd.yml  test-and-publish-to-testpypi.yml
docs/: search.js
docs/fpex0/: baseline.html  setup.html
fpex0/: InitialDistribution.py  __init__.py  fokker_planck.py  fpex0.py  integrators.py  setup.py  vde.py
fpex0/example/: exampleFit.py  exampleSetup.py  experiments.ipynb
fpex0_python/: __init__.py  baseline.py
fpex0_python/example/: exampleFit.py
scripts/: deploy.sh
src/fpex0_python/: CP.py  __init__.py  fpex0.py  setup.py
src/fpex0_python/example/: ID407-rate_1.25.json  ID407-rate_2.50.json  exampleSetup.py
src/fpex0_python/process/: CP.py  __init__.py  baseline.py
src/fpex0_python/tests/: InitialDistributionTest.py  pytest.ini  test_CP.py  test_baseline.py  test_linreg.py
src/fpex0_python/tests/test-data/: y.csv
tests/: test_CP.py  test_baseline.py  test_fpex0.py  test_linreg.py
tests/test-data/: x.csv
