[metadata]
name = fpex0_python
version = 1.0.4
author = Michael Strik
author_email = michael.strik@stud.uni-heidelberg.de
url = https://github.com/andreassommer/fpex0_python
description = This package is an implementation of the FPEX0 algorithm, a data-driven de-smearing method for DSC signals.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
    numpy
    scipy
    sympy

[options.packages.find]
where = src

[options.package_data]
example = *.json
